sampling from clrs

--- a/gemma-3.ipynb
+++ b/gemma-3.ipynb
@@ -36,18 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "76d3ef13",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W1020 04:07:24.718000 55396 site-packages\\torch\\distributed\\elastic\\multiprocessing\\redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_polynomial_value(x: float, c: list[float]) -> float:\n",
     "    cur_val = 0\n",
@@ -160,6 +152,49 @@
     "                tokenizer=tokenizer, device=\"cpu\")\n",
     "output = pipe(\"The Ohio State University official mascot is \", max_new_tokens=50)\n",
     "print(output[0]['generated_text'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8df5dc0d",
+   "metadata": {},
+   "source": [
+    "# CLRS Dataset Evaluation\n",
+    "\n",
+    "Now let's evaluate both models on algorithmic reasoning tasks from the CLRS dataset to see if adaptive temperature softmax improves performance on reasoning tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f04173e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import CLRS text utilities for generating algorithmic reasoning tasks\n",
+    "import sys\n",
+    "import os\n",
+    "from datasets import IterableDataset, Value, Features\n",
+    "\n",
+    "sys.path.append(os.path.join(os.getcwd(), 'clrs-repo'))\n",
+    "\n",
+    "from clrs._src.clrs_text.huggingface_generators import clrs_generator\n",
+    "\n",
+    "\n",
+    "ds = IterableDataset.from_generator(\n",
+    "        clrs_generator,\n",
+    "        features=Features(\n",
+    "            {\n",
+    "                \"text\": Value(dtype=\"string\", id=None),\n",
+    "                \"question\": Value(dtype=\"string\", id=None),\n",
+    "                \"answer\": Value(dtype=\"string\", id=None),\n",
+    "                \"algo_name\": Value(dtype=\"string\", id=None),\n",
+    "                \"length\": Value(dtype=\"int32\", id=None),\n",
+    "                \"use_hints\": Value(dtype=\"bool_\", id=None),\n",
+    "            }\n",
+    "        ),\n",
+    "        # gen_kwargs={\"algos_and_lengths\": algos_and_lengths},\n",
+    "    )"
    ]
   }
  ],
